python/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEWLINE
    COMMA
    NOTEBEGIN
    SILENCEBEGIN

Grammar

Rule 0     S' -> h
Rule 1     h -> tempo compasheader constlistinit voicelist
Rule 2     tempo -> TEMPOBEGIN SHAPE NUM
Rule 3     compasheader -> COMPASHEADERBEGIN NUM SLASH NUM
Rule 4     voice -> VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent
Rule 5     compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist
Rule 6     note -> NOTENAME value SHAPE
Rule 7     note -> NOTENAME ALTER value SHAPE
Rule 8     note -> NOTENAME value SHAPE PUNTO
Rule 9     note -> NOTENAME ALTER value SHAPE PUNTO
Rule 10    compaslist -> compas
Rule 11    compaslist -> compaslist compas
Rule 12    voicelist -> voice
Rule 13    voicelist -> voicelist voice
Rule 14    compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL
Rule 15    notelist -> note
Rule 16    notelist -> notelist note
Rule 17    value -> NUM
Rule 18    value -> CNAME
Rule 19    const -> CONST CNAME EQUALS NUM SEMICOLON
Rule 20    const -> CONST CNAME EQUALS CNAME SEMICOLON
Rule 21    constlistinit -> constlist
Rule 22    constlist -> const
Rule 23    constlist -> constlist const
Rule 24    voicecontent -> compasloop
Rule 25    voicecontent -> compas
Rule 26    voicecontent -> voicecontent compasloop
Rule 27    voicecontent -> voicecontent compas

Terminals, with rules where they appear

ALTER                : 7 9
CNAME                : 18 19 20 20
COMMA                : 
COMMENT              : 
COMPASBEGIN          : 14
COMPASHEADERBEGIN    : 3
CONST                : 19 20
EQUALS               : 19 20
LEFTCURL             : 14
LEFTPAR              : 4 5
LOOPBEGIN            : 5
NEWLINE              : 
NOTEBEGIN            : 
NOTENAME             : 6 7 8 9
NUM                  : 2 3 3 17 19
PUNTO                : 8 9
RIGHTCURL            : 14
RIGHTPAR             : 4 5
SEMICOLON            : 19 20
SHAPE                : 2 6 7 8 9
SILENCEBEGIN         : 
SLASH                : 3
TEMPOBEGIN           : 2
VOICEBEGIN           : 4
error                : 

Nonterminals, with rules where they appear

compas               : 10 11 25 27
compasheader         : 1
compaslist           : 5 11
compasloop           : 24 26
const                : 22 23
constlist            : 21 23
constlistinit        : 1
h                    : 0
note                 : 15 16
notelist             : 14 16
tempo                : 1
value                : 4 5 6 7 8 9
voice                : 12 13
voicecontent         : 4 26 27
voicelist            : 1 13

Parsing method: LALR

state 0

    (0) S' -> . h
    (1) h -> . tempo compasheader constlistinit voicelist
    (2) tempo -> . TEMPOBEGIN SHAPE NUM

    TEMPOBEGIN      shift and go to state 3

    h                              shift and go to state 1
    tempo                          shift and go to state 2

state 1

    (0) S' -> h .



state 2

    (1) h -> tempo . compasheader constlistinit voicelist
    (3) compasheader -> . COMPASHEADERBEGIN NUM SLASH NUM

    COMPASHEADERBEGIN shift and go to state 4

    compasheader                   shift and go to state 5

state 3

    (2) tempo -> TEMPOBEGIN . SHAPE NUM

    SHAPE           shift and go to state 6


state 4

    (3) compasheader -> COMPASHEADERBEGIN . NUM SLASH NUM

    NUM             shift and go to state 7


state 5

    (1) h -> tempo compasheader . constlistinit voicelist
    (21) constlistinit -> . constlist
    (22) constlist -> . const
    (23) constlist -> . constlist const
    (19) const -> . CONST CNAME EQUALS NUM SEMICOLON
    (20) const -> . CONST CNAME EQUALS CNAME SEMICOLON

    CONST           shift and go to state 10

    constlist                      shift and go to state 8
    const                          shift and go to state 9
    constlistinit                  shift and go to state 11

state 6

    (2) tempo -> TEMPOBEGIN SHAPE . NUM

    NUM             shift and go to state 12


state 7

    (3) compasheader -> COMPASHEADERBEGIN NUM . SLASH NUM

    SLASH           shift and go to state 13


state 8

    (21) constlistinit -> constlist .
    (23) constlist -> constlist . const
    (19) const -> . CONST CNAME EQUALS NUM SEMICOLON
    (20) const -> . CONST CNAME EQUALS CNAME SEMICOLON

    VOICEBEGIN      reduce using rule 21 (constlistinit -> constlist .)
    CONST           shift and go to state 10

    const                          shift and go to state 14

state 9

    (22) constlist -> const .

    CONST           reduce using rule 22 (constlist -> const .)
    VOICEBEGIN      reduce using rule 22 (constlist -> const .)


state 10

    (19) const -> CONST . CNAME EQUALS NUM SEMICOLON
    (20) const -> CONST . CNAME EQUALS CNAME SEMICOLON

    CNAME           shift and go to state 15


state 11

    (1) h -> tempo compasheader constlistinit . voicelist
    (12) voicelist -> . voice
    (13) voicelist -> . voicelist voice
    (4) voice -> . VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent

    VOICEBEGIN      shift and go to state 18

    voicelist                      shift and go to state 16
    voice                          shift and go to state 17

state 12

    (2) tempo -> TEMPOBEGIN SHAPE NUM .

    COMPASHEADERBEGIN reduce using rule 2 (tempo -> TEMPOBEGIN SHAPE NUM .)


state 13

    (3) compasheader -> COMPASHEADERBEGIN NUM SLASH . NUM

    NUM             shift and go to state 19


state 14

    (23) constlist -> constlist const .

    CONST           reduce using rule 23 (constlist -> constlist const .)
    VOICEBEGIN      reduce using rule 23 (constlist -> constlist const .)


state 15

    (19) const -> CONST CNAME . EQUALS NUM SEMICOLON
    (20) const -> CONST CNAME . EQUALS CNAME SEMICOLON

    EQUALS          shift and go to state 20


state 16

    (1) h -> tempo compasheader constlistinit voicelist .
    (13) voicelist -> voicelist . voice
    (4) voice -> . VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent

    $end            reduce using rule 1 (h -> tempo compasheader constlistinit voicelist .)
    VOICEBEGIN      shift and go to state 18

    voice                          shift and go to state 21

state 17

    (12) voicelist -> voice .

    VOICEBEGIN      reduce using rule 12 (voicelist -> voice .)
    $end            reduce using rule 12 (voicelist -> voice .)


state 18

    (4) voice -> VOICEBEGIN . LEFTPAR value RIGHTPAR voicecontent

    LEFTPAR         shift and go to state 22


state 19

    (3) compasheader -> COMPASHEADERBEGIN NUM SLASH NUM .

    CONST           reduce using rule 3 (compasheader -> COMPASHEADERBEGIN NUM SLASH NUM .)


state 20

    (19) const -> CONST CNAME EQUALS . NUM SEMICOLON
    (20) const -> CONST CNAME EQUALS . CNAME SEMICOLON

    NUM             shift and go to state 23
    CNAME           shift and go to state 24


state 21

    (13) voicelist -> voicelist voice .

    VOICEBEGIN      reduce using rule 13 (voicelist -> voicelist voice .)
    $end            reduce using rule 13 (voicelist -> voicelist voice .)


state 22

    (4) voice -> VOICEBEGIN LEFTPAR . value RIGHTPAR voicecontent
    (17) value -> . NUM
    (18) value -> . CNAME

    NUM             shift and go to state 27
    CNAME           shift and go to state 26

    value                          shift and go to state 25

state 23

    (19) const -> CONST CNAME EQUALS NUM . SEMICOLON

    SEMICOLON       shift and go to state 28


state 24

    (20) const -> CONST CNAME EQUALS CNAME . SEMICOLON

    SEMICOLON       shift and go to state 29


state 25

    (4) voice -> VOICEBEGIN LEFTPAR value . RIGHTPAR voicecontent

    RIGHTPAR        shift and go to state 30


state 26

    (18) value -> CNAME .

    RIGHTPAR        reduce using rule 18 (value -> CNAME .)
    SHAPE           reduce using rule 18 (value -> CNAME .)


state 27

    (17) value -> NUM .

    RIGHTPAR        reduce using rule 17 (value -> NUM .)
    SHAPE           reduce using rule 17 (value -> NUM .)


state 28

    (19) const -> CONST CNAME EQUALS NUM SEMICOLON .

    CONST           reduce using rule 19 (const -> CONST CNAME EQUALS NUM SEMICOLON .)
    VOICEBEGIN      reduce using rule 19 (const -> CONST CNAME EQUALS NUM SEMICOLON .)


state 29

    (20) const -> CONST CNAME EQUALS CNAME SEMICOLON .

    CONST           reduce using rule 20 (const -> CONST CNAME EQUALS CNAME SEMICOLON .)
    VOICEBEGIN      reduce using rule 20 (const -> CONST CNAME EQUALS CNAME SEMICOLON .)


state 30

    (4) voice -> VOICEBEGIN LEFTPAR value RIGHTPAR . voicecontent
    (24) voicecontent -> . compasloop
    (25) voicecontent -> . compas
    (26) voicecontent -> . voicecontent compasloop
    (27) voicecontent -> . voicecontent compas
    (5) compasloop -> . LOOPBEGIN LEFTPAR value RIGHTPAR compaslist
    (14) compas -> . COMPASBEGIN LEFTCURL notelist RIGHTCURL

    LOOPBEGIN       shift and go to state 33
    COMPASBEGIN     shift and go to state 34

    compasloop                     shift and go to state 31
    compas                         shift and go to state 32
    voicecontent                   shift and go to state 35

state 31

    (24) voicecontent -> compasloop .

    LOOPBEGIN       reduce using rule 24 (voicecontent -> compasloop .)
    COMPASBEGIN     reduce using rule 24 (voicecontent -> compasloop .)
    VOICEBEGIN      reduce using rule 24 (voicecontent -> compasloop .)
    $end            reduce using rule 24 (voicecontent -> compasloop .)


state 32

    (25) voicecontent -> compas .

    LOOPBEGIN       reduce using rule 25 (voicecontent -> compas .)
    COMPASBEGIN     reduce using rule 25 (voicecontent -> compas .)
    VOICEBEGIN      reduce using rule 25 (voicecontent -> compas .)
    $end            reduce using rule 25 (voicecontent -> compas .)


state 33

    (5) compasloop -> LOOPBEGIN . LEFTPAR value RIGHTPAR compaslist

    LEFTPAR         shift and go to state 36


state 34

    (14) compas -> COMPASBEGIN . LEFTCURL notelist RIGHTCURL

    LEFTCURL        shift and go to state 37


state 35

    (4) voice -> VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent .
    (26) voicecontent -> voicecontent . compasloop
    (27) voicecontent -> voicecontent . compas
    (5) compasloop -> . LOOPBEGIN LEFTPAR value RIGHTPAR compaslist
    (14) compas -> . COMPASBEGIN LEFTCURL notelist RIGHTCURL

    VOICEBEGIN      reduce using rule 4 (voice -> VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent .)
    $end            reduce using rule 4 (voice -> VOICEBEGIN LEFTPAR value RIGHTPAR voicecontent .)
    LOOPBEGIN       shift and go to state 33
    COMPASBEGIN     shift and go to state 34

    compasloop                     shift and go to state 38
    compas                         shift and go to state 39

state 36

    (5) compasloop -> LOOPBEGIN LEFTPAR . value RIGHTPAR compaslist
    (17) value -> . NUM
    (18) value -> . CNAME

    NUM             shift and go to state 27
    CNAME           shift and go to state 26

    value                          shift and go to state 40

state 37

    (14) compas -> COMPASBEGIN LEFTCURL . notelist RIGHTCURL
    (15) notelist -> . note
    (16) notelist -> . notelist note
    (6) note -> . NOTENAME value SHAPE
    (7) note -> . NOTENAME ALTER value SHAPE
    (8) note -> . NOTENAME value SHAPE PUNTO
    (9) note -> . NOTENAME ALTER value SHAPE PUNTO

    NOTENAME        shift and go to state 43

    note                           shift and go to state 41
    notelist                       shift and go to state 42

state 38

    (26) voicecontent -> voicecontent compasloop .

    LOOPBEGIN       reduce using rule 26 (voicecontent -> voicecontent compasloop .)
    COMPASBEGIN     reduce using rule 26 (voicecontent -> voicecontent compasloop .)
    VOICEBEGIN      reduce using rule 26 (voicecontent -> voicecontent compasloop .)
    $end            reduce using rule 26 (voicecontent -> voicecontent compasloop .)


state 39

    (27) voicecontent -> voicecontent compas .

    LOOPBEGIN       reduce using rule 27 (voicecontent -> voicecontent compas .)
    COMPASBEGIN     reduce using rule 27 (voicecontent -> voicecontent compas .)
    VOICEBEGIN      reduce using rule 27 (voicecontent -> voicecontent compas .)
    $end            reduce using rule 27 (voicecontent -> voicecontent compas .)


state 40

    (5) compasloop -> LOOPBEGIN LEFTPAR value . RIGHTPAR compaslist

    RIGHTPAR        shift and go to state 44


state 41

    (15) notelist -> note .

    RIGHTCURL       reduce using rule 15 (notelist -> note .)
    NOTENAME        reduce using rule 15 (notelist -> note .)


state 42

    (14) compas -> COMPASBEGIN LEFTCURL notelist . RIGHTCURL
    (16) notelist -> notelist . note
    (6) note -> . NOTENAME value SHAPE
    (7) note -> . NOTENAME ALTER value SHAPE
    (8) note -> . NOTENAME value SHAPE PUNTO
    (9) note -> . NOTENAME ALTER value SHAPE PUNTO

    RIGHTCURL       shift and go to state 45
    NOTENAME        shift and go to state 43

    note                           shift and go to state 46

state 43

    (6) note -> NOTENAME . value SHAPE
    (7) note -> NOTENAME . ALTER value SHAPE
    (8) note -> NOTENAME . value SHAPE PUNTO
    (9) note -> NOTENAME . ALTER value SHAPE PUNTO
    (17) value -> . NUM
    (18) value -> . CNAME

    ALTER           shift and go to state 48
    NUM             shift and go to state 27
    CNAME           shift and go to state 26

    value                          shift and go to state 47

state 44

    (5) compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR . compaslist
    (10) compaslist -> . compas
    (11) compaslist -> . compaslist compas
    (14) compas -> . COMPASBEGIN LEFTCURL notelist RIGHTCURL

    COMPASBEGIN     shift and go to state 34

    compaslist                     shift and go to state 49
    compas                         shift and go to state 50

state 45

    (14) compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL .

    COMPASBEGIN     reduce using rule 14 (compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL .)
    LOOPBEGIN       reduce using rule 14 (compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL .)
    VOICEBEGIN      reduce using rule 14 (compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL .)
    $end            reduce using rule 14 (compas -> COMPASBEGIN LEFTCURL notelist RIGHTCURL .)


state 46

    (16) notelist -> notelist note .

    RIGHTCURL       reduce using rule 16 (notelist -> notelist note .)
    NOTENAME        reduce using rule 16 (notelist -> notelist note .)


state 47

    (6) note -> NOTENAME value . SHAPE
    (8) note -> NOTENAME value . SHAPE PUNTO

    SHAPE           shift and go to state 51


state 48

    (7) note -> NOTENAME ALTER . value SHAPE
    (9) note -> NOTENAME ALTER . value SHAPE PUNTO
    (17) value -> . NUM
    (18) value -> . CNAME

    NUM             shift and go to state 27
    CNAME           shift and go to state 26

    value                          shift and go to state 52

state 49

    (5) compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist .
    (11) compaslist -> compaslist . compas
    (14) compas -> . COMPASBEGIN LEFTCURL notelist RIGHTCURL

  ! shift/reduce conflict for COMPASBEGIN resolved as shift
    LOOPBEGIN       reduce using rule 5 (compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist .)
    VOICEBEGIN      reduce using rule 5 (compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist .)
    $end            reduce using rule 5 (compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist .)
    COMPASBEGIN     shift and go to state 34

  ! COMPASBEGIN     [ reduce using rule 5 (compasloop -> LOOPBEGIN LEFTPAR value RIGHTPAR compaslist .) ]

    compas                         shift and go to state 53

state 50

    (10) compaslist -> compas .

    COMPASBEGIN     reduce using rule 10 (compaslist -> compas .)
    LOOPBEGIN       reduce using rule 10 (compaslist -> compas .)
    VOICEBEGIN      reduce using rule 10 (compaslist -> compas .)
    $end            reduce using rule 10 (compaslist -> compas .)


state 51

    (6) note -> NOTENAME value SHAPE .
    (8) note -> NOTENAME value SHAPE . PUNTO

    RIGHTCURL       reduce using rule 6 (note -> NOTENAME value SHAPE .)
    NOTENAME        reduce using rule 6 (note -> NOTENAME value SHAPE .)
    PUNTO           shift and go to state 54


state 52

    (7) note -> NOTENAME ALTER value . SHAPE
    (9) note -> NOTENAME ALTER value . SHAPE PUNTO

    SHAPE           shift and go to state 55


state 53

    (11) compaslist -> compaslist compas .

    COMPASBEGIN     reduce using rule 11 (compaslist -> compaslist compas .)
    LOOPBEGIN       reduce using rule 11 (compaslist -> compaslist compas .)
    VOICEBEGIN      reduce using rule 11 (compaslist -> compaslist compas .)
    $end            reduce using rule 11 (compaslist -> compaslist compas .)


state 54

    (8) note -> NOTENAME value SHAPE PUNTO .

    RIGHTCURL       reduce using rule 8 (note -> NOTENAME value SHAPE PUNTO .)
    NOTENAME        reduce using rule 8 (note -> NOTENAME value SHAPE PUNTO .)


state 55

    (7) note -> NOTENAME ALTER value SHAPE .
    (9) note -> NOTENAME ALTER value SHAPE . PUNTO

    RIGHTCURL       reduce using rule 7 (note -> NOTENAME ALTER value SHAPE .)
    NOTENAME        reduce using rule 7 (note -> NOTENAME ALTER value SHAPE .)
    PUNTO           shift and go to state 56


state 56

    (9) note -> NOTENAME ALTER value SHAPE PUNTO .

    RIGHTCURL       reduce using rule 9 (note -> NOTENAME ALTER value SHAPE PUNTO .)
    NOTENAME        reduce using rule 9 (note -> NOTENAME ALTER value SHAPE PUNTO .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for COMPASBEGIN in state 49 resolved as shift
